<resources>
    <string name="app_name">AAPNARSHOP SELLER</string>
    <string name="dialog_title">Aapnarshop</string>
    <string name="one">১</string>
    <string name="two">২</string>
    <string name="three">৩</string>
    <string name="four">৪</string>
    <string name="five">৫</string>
    <string name="six">৬</string>
    <string name="seven">৭</string>
    <string name="eight">৮</string>
    <string name="nine">৯</string>
    <string name="zero">০</string>
    <string name="plus">+</string>
    <string name="ok_string_bn">ঠিক আছে</string>
    <string name="ok_string_en">Ok</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="phone_number_email">Phone Number/Email</string>
    <string name="phone_number_email_bn">ফোন নাম্বার/ইমেইল</string>
    <string name="password">Password</string>
    <string name="password_bn">পাসওয়ার্ড</string>
    <string name="logo">logo</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_bn">সাইন ইন</string>
    <string name="or_sign_in_with">Or Sign in with</string>
    <string name="or_sign_in_with_bn">অথবা সাইন ইন করুন</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="do_you_have_any_shop">Do You Have Any Shop? \nSell your product in your own area online? </string>
    <string name="do_you_have_any_shop_bn">আপনার কি কোন দোকান আছে? \nআপনার এলাকায় আপনার পণ্য বিক্রি করুন? </string>
    <string name="register_for_online_shop">Register For Online Shop</string>
    <string name="register_for_online_shop_bn">অনলাইন দোকানের জন্য রেজিস্ট্রেশন করুন</string>
    <string name="by_signing_up_you_agree_with_the_terms_of_service_and_privacy_policy">By signing up,you agree with the<font color='#0581E3'><b> Terms of Service</b></font> and<font color='#0581E3'><b> Privacy policy</b></font></string>
    <string name="by_signing_up_you_agree_with_the_terms_of_service_and_privacy_policy_bn">সাইন আপ করার ক্ষেত্রে আপনাকে<font color='#0581E3'><b> সেবার শর্তসমূহ</b></font>এবং<font color='#0581E3'><b> প্রাইভেসি পলিসি</b></font> মানতে হবে</string>
    <string name="google_image">google_image</string>
    <string name="facebook_image">facebook_image</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="shop_type">Shop Type</string>
    <string name="shop_type_bn">দোকানের ধরণ</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_name_bn">দোকানের নাম</string>
    <string name="shop_address">Shop Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="back_arrow">back arrow</string>
    <string name="success_image">success image</string>
    <string name="your_request_has_been_sent_successfully">Your request has been sent successfully</string>
    <string name="sign_out">Sign Out</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="add_product">Add Product</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="drawer_logo">drawer logo</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="category_bn">ক্যাটাগরি</string>
    <string name="product_type">Product Type</string>
    <string name="product_type_bn">পণ্যের ধরণ</string>
    <string name="brand">Brand</string>
    <string name="brand_bn">ব্র্যান্ড</string>
    <string name="supplier">Supplier</string>
    <string name="supplier_bn">সরবরাহকারী</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_bn">পণ্যের নাম</string>
    <string name="write_product_name_here">Write product name here</string>
    <string name="product_size">Product Size</string>
    <string name="product_size_bn">পণ্যের সাইজ</string>
    <string name="write_product_size_here">Write product size here</string>
    <string name="unit_size">Unit</string>
    <string name="unit_size_bn">ইউনিট</string>
    <string name="weight_of_the_unit">Weight of the Unit</string>
    <string name="weight_of_the_unit_bn">ইউনিটের ওজন</string>
    <string name="retail_sell_price_per_unit">Retail Sell Price(Per Unit)</string>
    <string name="retail_sell_price_per_unit_bn">খুচরা বিক্রয় মূল্য(প্রতি ইউনিট)</string>
    <string name="tk">TK</string>
    <string name="tk_bn">টাকা</string>
    <string name="total_quantity">Total Quantity</string>
    <string name="total_quantity_bn">সর্বমোট পরিমাণ</string>
    <string name="total_price_wholesale">Total Price(Wholesale)</string>
    <string name="total_price_wholesale_bn">সর্বমোট দাম(পাইকারী)</string>
    <string name="product_details">Product Details</string>
    <string name="product_details_bn">পণ্যের বিবরণ</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_bn">বাতিল</string>
    <string name="update">Update</string>
    <string name="update_bn">আপডেট</string>
    <string name="gallery_image">gallery image</string>
    <string name="browse">Browse</string>
    <string name="browse_bn">ব্রাউজ</string>
    <string name="forward_arrow">forward arrow</string>
    <string name="product_image">product image</string>
    <string name="one_of_our_agent_will_call_you_soon">One of our agent will call you soon</string>
    <string name="product_successfully_added">Product Successfully Added</string>
    <string name="add_more">Add More</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_product">Edit Product</string>
    <string name="active_product">Active Product</string>
    <string name="inactive_product">Inactive Product</string>
    <string name="total_active_product">Total Active Product</string>
    <string name="total_active_product_bn">মোট এক্টিভ পণ্য</string>
    <string name="new_order">New Order</string>
    <string name="new_order_bn">নতুন অর্ডার</string>
    <string name="limited_product">Limited Product</string>
    <string name="limited_product_bn">সীমিত পণ্য</string>
    <string name="add_new_product">Add New Product</string>
    <string name="add_new_product_bn">নতুন পণ্য যুক্ত করুন</string>
    <string name="stock_limited_product">Stock Limited Product</string>
    <string name="stock_limited_product_bn">স্টক সীমিত পণ্য</string>
    <string name="create_offer">Create Offer</string>
    <string name="create_offer_bn">অফার তৈরী করুন</string>
    <string name="select_create_offer">Select/Create Offer</string>
    <string name="select_create_offer_bn">Select/Create Offer</string>
    <string name="percentage_or_amount">Percentage or Amount</string>
    <string name="percentage_or_amount_bn">পারসেন্টস অথবা Amount</string>
    <string name="amount_of_discount">Amount of Discount %</string>
    <string name="amount_of_discount_bn">ডিস্কাউন্টের পরিমাণ %</string>
    <string name="offer_name">Offer Name</string>
    <string name="offer_name_bn">অফারের নাম</string>
    <string name="offer_period">Offer Period</string>
    <string name="offer_period_bn">অফারের সময়</string>
    <string name="to">To</string>
    <string name="offer_type">Offer Type</string>
    <string name="offer_type_bn">অফারের ধরণ</string>
    <string name="include_exclude_products">Include/Exclude Products</string>
    <string name="create_this_offer">Create this offer</string>
    <string name="create_this_offer_bn">অফারটি তৈরী করুন</string>
    <string name="delete">Delete</string>
    <string name="delete_bn">ডিলিট</string>
    <string name="start_stop">Stop/Start</string>
    <string name="start_stop_bn">স্টপ/স্টাট</string>
    <string name="profile">Profile</string>
    <string name="submenu">submenu</string>
    <string name="menu_icon">menu icon</string>
    <string name="menu">Menu</string>
    <string name="en">EN</string>
    <string name="bn">বাংলা</string>
    <string name="language">Language</string>
    <string name="camera_image">camera image</string>
    <string name="colon">:</string>
    <string name="web">Website</string>
    <string name="web_bn">ওয়েবসাইট</string>
    <string name="address">Address</string>
    <string name="address_bn">ঠিকানা</string>
    <string name="city">City</string>
    <string name="city_bn">শহর</string>
    <string name="area">Area</string>
    <string name="area_bn">এলাকা</string>
    <string name="private_information">Private Information</string>
    <string name="private_information_bn">প্রাইভেট তথ্য</string>
    <string name="previous_order">Previous Order</string>
    <string name="previous_order_bn">পূর্বের অর্ডার</string>
    <string name="your_product">Your Product</string>
    <string name="your_product_bn">আপনার পণ্য</string>
    <string name="settings">Settings</string>
    <string name="offer">Offer</string>
    <string name="report">Report</string>
    <string name="allProduct">All Product</string>
    <string name="search">Search</string>
    <string name="myRating">Rating</string>
    <string name="notification">Notification</string>
    <string name="offerList">Offer List</string>
    <string name="buyer_image">buyer image</string>
    <string name="your_order_successfully_created">Your Order Successfully Created</string>
    <string name="offer_description">Offer Description</string>
    <string name="discount_amount">Discount amount</string>
    <string name="offer_name_auto">Offer Name(Auto)</string>
    <string name="edit_image">edit image</string>
    <string name="edit">Edit</string>
    <string name="stop_this_offer">Stop this offer</string>
    <string name="details">Details</string>
    <string name="minus">-</string>
    <string name="potato">Potato</string>
    <string name="_50_kg_available">50 Kg available</string>
    <string name="_120">৳ 120</string>
    <string name="per_kg">per kg</string>
    <string name="_0">0</string>
    <string name="priority_checking">priority checking</string>
    <string name="your_active_product">Your active product</string>
    <string name="priority_order">Priority order</string>
    <string name="max_delivery_time">Max Delivery Time</string>
    <string name="max_delivery_time_bn">সর্বোচ্চ ডেলিভারীর সময়</string>
    <string name="weight_limit">Weight Limit</string>
    <string name="weight_limit_bn">ওজনের সীমা</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_bn">পাসওয়ার্ড পরিবর্তন</string>
    <string name="re_type_new">Re-type New</string>
    <string name="new_text">New</string>
    <string name="current">Current</string>
    <string name="save">Save</string>
    <string name="save_bn">সেভ</string>
    <string name="forget_your_password">Forget Password?</string>
    <string name="forget_your_password_bn">পাসওয়ার্ড ভুলে গেছেন?</string>
    <string name="minimum_buy">Minimum Buy</string>
    <string name="minimum_buy_bn">মিনিমাম বিক্রির পরিমাণ</string>
    <string name="product">Product</string>
    <string name="product_bn">পণ্য</string>
    <string name="product_add">Product Add</string>
    <string name="to_calender">TO</string>
    <string name="pending_order">Pending Order</string>
    <string name="order_details">Order Details</string>
    <string name="complete_order">All Order</string>
    <string name="sat">SAT</string>
    <string name="fri">FRI</string>
    <string name="current_date">current date</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
</resources>