<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/app_yellow4"
    tools:context=".Fragment.authentication.SignOut">

    <ImageView
        android:id="@+id/sign_out_back_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/back_arrow"
        android:padding="15dp"
        android:src="@drawable/ic_back"
        app:tint="@color/app_black1" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/success_image"
        android:src="@drawable/ic_check" />


    <TextView
        android:id="@+id/sign_out_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/your_request_has_been_sent_successfully"
        android:textColor="@color/app_yellow"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sign_out_message_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/one_of_our_agent_will_call_you_soon"
        android:textAllCaps="true"
        android:textColor="@color/app_black1"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/sign_out"
        android:layout_width="200dp"
        android:layout_height="45dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@drawable/yellow_background_capsul_shape_fill"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@color/app_black1"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>
</layout>