<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/recyclerView_all_product_product_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"

                    android:contentDescription="@string/product_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/potato" />

                <TextView
                    android:id="@+id/recyclerView_all_product_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/potato"
                    android:textColor="@color/app_black1"
                    android:textSize="@dimen/font_xl" />

                <TextView
                    android:id="@+id/recyclerView_all_product_available_product"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/_50_kg_available"
                    android:textColor="@color/app_yellow3"
                    android:textSize="@dimen/font_m" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/recyclerView_all_product_product_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:text="@string/_120"
                        android:textColor="@color/app_yellow3"
                        android:textSize="@dimen/font_big"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/recyclerView_all_product_product_unit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/per_kg"
                        android:textColor="@color/app_black1"
                        android:textSize="@dimen/font_m"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/recyclerView_all_product_minus_btn"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/black_background_left_capsul_shape_fill"
                    android:gravity="center"
                    android:text="@string/minus"
                    android:textStyle="bold"
                    android:textColor="@color/app_white1"
                    tools:ignore="UnusedAttribute" />

                <EditText
                    android:id="@+id/recyclerView_all_product__count"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:gravity="center"
                    android:text="@string/_0"
                    android:inputType="number"
                    android:textSize="@dimen/font_xl"
                    android:background="@android:color/transparent"
                    android:textColor="@color/app_black1" />

                <TextView
                    android:id="@+id/recyclerView_all_product_plus"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/yellow_background_right_capsul_shape_fill"
                    android:gravity="center"
                    android:text="@string/plus"
                    android:textStyle="bold"
                    android:textColor="@color/app_black1"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/recyclerView_all_product_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center_vertical"
                    android:text="@string/details"
                    android:padding="5dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:textColor="@color/app_black1"
                    android:textSize="@dimen/font_xl"

                    android:textStyle="bold"
                    app:drawableEndCompat="@drawable/ic_baseline_arrow_forward_ios_24" />


                <TextView
                    android:id="@+id/recyclerView_all_product_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/yellow_background_capsul_shape_fill"
                    android:gravity="center"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/update"
                    android:textColor="@color/app_black1"
                    android:textSize="@dimen/font_xl"
                    android:textStyle="bold" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


</LinearLayout>
</layout>