<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/offer_type"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/all_offer_offer_type_dropdown"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custome_spinner"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/offer_name"
                android:textSize="14sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/all_offer_offer_name_dropdown"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/custome_spinner"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="12sp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/offer_description"
                android:textSize="14sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/yellow_background_uper_shape_fill"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/all_offer_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text=""
                        android:textColor="@color/app_black1"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/all_offer_validity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text=""
                        android:textColor="@color/app_black1"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/yellow_background_lower_shape_fill"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp">

                    <TextView
                        android:id="@+id/all_offer_stop"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/black_background_capsul_shape_stoke"
                        android:gravity="center"
                        android:text="@string/stop_this_offer"
                        android:textColor="@color/app_black1"
                        android:textSize="14sp"
                        android:textStyle="bold" />


                    <LinearLayout
                        android:id="@+id/all_offer_edit"
                        android:layout_width="120dp"
                        android:layout_height="35dp"
                        android:background="@drawable/black_background_capsul_shape_stoke"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:orientation="horizontal"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:contentDescription="@string/edit_image"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="10dp"
                                android:src="@drawable/ic_edit" />

                            <TextView
                                android:id="@+id/update"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit"
                                android:textColor="@color/app_black1"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                        </LinearLayout>


                    </LinearLayout>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
</layout>